# retuner

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALLER.txt  README.md
.github/: FUNDING.yml  copilot-instructions.md
.github/prompts/: standard.md
.github/workflows/: build.yml  release.yml
cmake/: CodeSign.cmake  InstallMacOS.cmake  InstallUnix.cmake  InstallWindows.cmake  Packaging.cmake
deploy/: setup.nsi  setup.pkgproj
docs/: manual.md
src/: editor.cpp  editor.hpp  params.hpp  processor.cpp  processor.hpp  rubberbandshifter.hpp  style.cpp  style.hpp  tuning.hpp
src/app/: CMakeLists.txt  application.cpp  application.hpp  audioengine.cpp  audioengine.hpp  contentcomponent.cpp  contentcomponent.hpp  exportdialog.cpp  exportdialog.hpp  exporter.cpp  exporter.hpp  exportthread.cpp  exportthread.hpp  mainwindow.cpp  mainwindow.hpp  mediaplayercomponent.cpp  mediaplayercomponent.hpp  retuner.desktop.in
test/: CMakeLists.txt  rubberbandtest.cpp  runner.cpp
utils/: apple.env.sample  artifacts.py  release-linux.sh  release-macos.sh  release-windows.bat  uninstall-macos.sh
